# cpp-logger

./: CMakeLists.txt  build.sh
benchmark/: Makefile  logger_bm.cpp  logger_bm_th.cpp
example/: CMakeLists.txt  logger.conf  logger_example.cpp  loggerconf_example.cpp
src/: log_message.h  log_queue.h  log_thread.cpp  log_thread.h  log_writer.cpp  log_writer.h  logger.cpp  logger.h  logger_queue.h  logger_thread.cpp  logger_thread.h  loggerconf.cpp  loggerconf.h
